--- a/src/components/Posts/styles.css
+++ b/src/components/Posts/styles.css
@@ -1,3 +1,9 @@
+.posts {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  gap: 30px;
+}
+
 .post {
     background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
